@@ -2,9 +2,7 @@
 
 attendees = context.attendees
 
-attendees = [att for att in attendees if att['id'] not in ids]
-
-context.setAttendees(attendees)
+context.removeAttendees(ids)
 
 if REQUEST:
     REQUEST.RESPONSE.redirect('%s/calendar_attendees_form' % (context.absolute_url(), ))
